feat: temporarily use kotlin compiler class for launching language server