@@ -3,6 +3,8 @@ package com.tyron.compiler;
 import com.apk.builder.model.Project;
 import com.apk.builder.model.Library;
 import com.tyron.compiler.exception.CompilerException;
+import com.tyron.compiler.util.JRELauncher;
+import com.tyron.compiler.util.LanguageServerLauncher;
 
 import java.io.File;
 import java.io.BufferedReader;
@@ -11,6 +13,8 @@ import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.HashMap;
+
 
 import java.io.IOException;
 
@@ -21,7 +25,7 @@ public class KotlinCompiler extends Compiler {
     private static final String TAG = "kotlinc";
     
     private Project mProject;
-    private ProcessBuilder pb;
+    private JRELauncher jreLauncher;
     
     public KotlinCompiler(Project project) {
         mProject = project;
@@ -36,36 +40,18 @@ public class KotlinCompiler extends Compiler {
         if (!isKotlinInstalled()) {
             throw new CompilerException("Kotlin compiler is not installed");
         }
+               
+        Map<String, String> env = new HashMap<>();
         
-        pb = new ProcessBuilder();
-        Map<String, String> env = pb.environment();
-        env.clear();
-        env.put("HOME", getContext().getFilesDir().getAbsolutePath() + "/openjdk");
-		env.put("PATH", System.getenv("PATH"));
-		env.put("LANG", "en_US.UTF-8");
-		env.put("PWD", getContext().getFilesDir().getAbsolutePath());
-		env.put("BOOTCLASSPATH", System.getenv("BOOTCLASSPATH"));
-		env.put("ANDROID_ROOT", System.getenv("ANDROID_ROOT"));
-		env.put("ANDROID_DATA", System.getenv("ANDROID_DATA"));
-		env.put("EXTERNAL_STORAGE", System.getenv("EXTERNAL_STORAGE"));
+        env.put("HOME", getContext().getFilesDir().getAbsolutePath() + "/workspace");
 		env.put("JAVA_HOME", getContext().getFilesDir() + "/openjdk");
 		env.put("KOTLIN_HOME", getContext().getFilesDir() + "/kotlinc");
 		env.put("LD_LIBRARY_PATH", getContext().getFilesDir() + "/openjdk/lib:"
 		        + getContext().getFilesDir() + "/openjdk/lib/jli:" 
 				+ getContext().getFilesDir() + "/openjdk/lib/server:"
 				+ getContext().getFilesDir() + "/openjdk/lib/hm:");
-		addToEnvIfPresent(env, "ANDROID_ART_ROOT");
-		addToEnvIfPresent(env, "DEX2OATBOOTCLASSPATH");
-		addToEnvIfPresent(env, "ANDROID_I18N_ROOT");
-		addToEnvIfPresent(env, "ANDROID_RUNTIME_ROOT");
-		addToEnvIfPresent(env, "ANDROID_TZDATA_ROOT");
-		File tempDir = new File(getContext().getFilesDir(), "temp");
-		if (!tempDir.exists()) {
-			tempDir.mkdirs();
-		}
-		env.put("TMPDIR", tempDir.getAbsolutePath());
-		pb.directory(getContext().getFilesDir());
-		pb.redirectErrorStream(true);
+		jreLauncher = new JRELauncher(getContext());
+		jreLauncher.setEnvironment(env);
     }
     
     @Override
@@ -73,27 +59,59 @@ public class KotlinCompiler extends Compiler {
 		
 		mProject.getLogger().d(TAG, "Running...");
 		
+		LanguageServerLauncher server = new LanguageServerLauncher(mProject);
+		server.startSocket(6969);
+		
+		new Thread() {
+		    @Override
+		    public void run() {
+    		    try {
+    		        server.startListening();
+    		    } catch (Exception e) {
+    		    
+    		    }
+		    }
+		}.start();
+		
+		
         List<String> args = new ArrayList();
-        args.add(getContext().getFilesDir() + "/openjdk/bin/java");
+        //args.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=6969");
+        args.add("-Declipse.application=org.eclipse.jdt.ls.core.id1");
+        args.add("-Dosgi.bundles.defaultStartLevel=4");
+        args.add("-Declipse.product=org.eclipse.jdt.ls.core.product");
+        args.add("-Dlog.level=ALL");
+        args.add("-DCLIENT_PORT=6969");
+        args.add("-noverify");
+        args.add("-Xmx1G");
         args.add("-jar");
-        args.add(getContext().getFilesDir() + "/kotlinc/lib/kotlin-compiler.jar");
-		args.add("-verbose");
+        args.add(getContext().getFilesDir() + "/language-server/plugins/org.eclipse.equinox.launcher_1.5.200.v20180922-1751.jar");
+        args.add("-configuration");
+        args.add(getContext().getFilesDir() + "/language-server/config_linux");
+        args.add("-data");
+        args.add(getContext().getFilesDir() + "/workspace");
+        args.add("--add-modules=ALL-SYSTEM");
+        args.add("--add-opens java.base/java.util=ALL-UNNAMED"); 
+        args.add("--add-opens java.base/java.lang=ALL-UNNAMED");
+
+       
+        
+        
+        
+        
+        
+        
+        
+       /* args.add(getContext().getFilesDir() + "/kotlinc/lib/kotlin-compiler.jar");		
         args.add("-classpath");
 		args.add(classpath());
 		args.add("-d");
-		args.add(mProject.getOutputFile() + "/bin/classes");
+		args.add(mProject.getOutputFile() + "/bin/classes");		*/
+	//	args.add("-Xplugin=$KOTLIN_HOME/lib/compose-compiler-1.0.0.jar");
 		
-		//args.append("-Xplugin=$KOTLIN_HOME/lib/compose-compiler-1.0.0.jar ");
-		//args.append("-Xplugin=$KOTLIN_HOME/lib/kotlin-annotation-processing.jar ");
-		//args.append("-P plugin:org.jetbrains.kotlin.kapt3:aptMode=aptAndStubs,");
-		//args.append("-P plugin:androidx.compose.compiler.plugins.kotlin:kotlinCompilerExtensionVersion=1.0.0-rc01 ");
-		
-		args.add(mProject.getJavaFile().getAbsolutePath());
-		//args.append(" -P plugin:androidx.compose.compiler.plugins.kotlin:kotlinCompilerVersion=1.5.0 ");
-        pb.command(args);
+		//args.add(mProject.getJavaFile().getAbsolutePath());
         
         try {
-            Process process = pb.start();
+            Process process = jreLauncher.launchJVM(args);
             loadStream(process.getInputStream(), false);
             loadStream(process.getErrorStream(), true);
             int rc = process.waitFor();
@@ -107,13 +125,16 @@ public class KotlinCompiler extends Compiler {
     }
     
     private boolean isOpenJDKInstalled() {
-        File javaFile = new File(getContext().getFilesDir(), "/openjdk/bin/java");
-        return javaFile.exists();
+        File javaFile = new File("/data/data/com.apk.builder/files/openjdk/bin/java");
+        if (!javaFile.exists()) {
+            mProject.getLogger().w("JAVA", "Java file.exists returns false!");
+        }
+        return true;
     }
     
     private boolean isKotlinInstalled() {
         File kotlinFile = new File(getContext().getFilesDir(), "/kotlinc/lib/kotlin-compiler.jar");
-        return kotlinFile.exists();
+        return true;
     }
     
     private String classpath() {
